--- a/kubernetes/Jenkinsfile
+++ b/kubernetes/Jenkinsfile
@@ -71,7 +71,8 @@ podTemplate(label: label, containers: [
             container('kubectl') {
                 sh "kubectl apply -n ${namespace} -f ${deployment}"
                 sh "kubectl apply -n ${namespace} -f ${service}"
-                sh "kubectl get svc -n devops"
+                sh "kubectl set image deployment ${appname} ${containername}=${image}:${tag} -n ${namespace}"
+				sh "kubectl get svc -n ${namespace}"
             }
         }
 
